2007-12-10  Dirk Frederickx (dirk.frederickx@gmail.com)

        * Added selenium-core (selenium.core.version=0.8.3, selenium.core.revision=1879)
        with few patches for mootools compatibility.
        (see http://forum.mootools.net/viewtopic.php?id=1639)

        * Added first set of web unit tests based on Selenium.
        Read the tests/selenium-tests/readme.txt for more instructions how to 
        run them manually. Automated testruns from ant still need to be setup.
        
 
2007-11-25  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.5.166

        * [JSPWIKI-78]: It's no longer possible to recover password
        based on user account name - you need the email address.  Props
        to Ounce Labs.
        
        * Contents of login.lostpw.help, login.lostpw.name have changed. Updated
        English and Finnish translations accordingly.
        
        * [JSPWIKI-65]: InsertTag now protects against a problematic XSS injection.
        Thanks to Ounce Labs.

2007-12-04  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.165
        
        * [JSPWiki-88] Fixed js bug to tab to group or profile in IE6

 
2007-12-01  Dirk Frederickx (dirk.frederickx@gmail.com)

        * 2.5.164  : various xss vulnerablilities
        
        * Wrong Password Error Message May increase Credential Guess [JSPWIKI-85]

        * GROUP parameter validation [JSPWIKI-69]

        * Input Validation of editors pararmeter [JSPWki-67]

        * Resolve commonheader.jsp xss vulnerabilities wrt skins [JSPWIKI- 66]

        * Various wiki tags improvements [JSPWiki-63] 

        * Author Tag and Asserted Username [JSPWiki-60]        

2007-11-25  Janne Jalkanen <jalkanen@ecyrd.com>

        * 2.5.163
        
        * Rolled back fix to JSPWIKI-74, since a) it's not necessary,
        and b) it kills the performance of the save process.
        
        * [JSPWIKI-84]: Added note to the jspwiki.properties.

2007-11-??  Andrew Jaquith <andrew AT apache DOT org>
